Initial commit: Portfolio frontend

--- a/.env.local 
+++ b/.env.local 
@@ -1,13 +1,14 @@
-# ======= CONFIGURATION SUPABASE =======
-SUPABASE_URL=https://votre-project-id.supabase.co
-SUPABASE_SERVICE_ROLE=sbp_votre_cle_service_role_ici
-SUPABASE_BUCKET=docs-private
-
-# ======= CONFIGURATION SÉCURITÉ =======
-ADMIN_PASSWORD=Lishan414141n
-JWT_SECRET=at-least-32-char-random-string-here-make-it-very-long
-
 # ======= CONFIGURATION APPLICATION =======
-API_BASE_URL=https://fanuel045.vercel.app
+ADMIN_PASSWORD=Lishan414141n
+API_BASE_URL=https://fanuel045-api.vercel.app
+
+# ======= CONFIGURATION SUPABASE (UNIQUEMENT POUR L'API) =======
+# CES VARIABLES NE SONT PAS UTILISÉES DANS LE FRONTEND !
+# SUPABASE_URL=https://votre-project-id.supabase.co
+# SUPABASE_SERVICE_ROLE=sbp_votre_cle_service_role_ici
+# SUPABASE_BUCKET=docs-private
+# JWT_SECRET=at-least-32-char-random-string-here-make-it-very-long
+
+# ======= CONFIGURATION CORS =======
 CORS_ORIGINS=https://fanuel045.github.io,http://localhost:5500
 PUBLIC_DOC_TYPES=cv
