--- a/vercel.json
+++ b/vercel.json
@@ -18,15 +18,6 @@
   ],
   "headers": [
     {
-      "source": "/api/(.*)",
-      "headers": [
-        { 
-          "key": "Access-Control-Allow-Origin", 
-          "value": "https://fanuel045-api.vercel.app" 
-        }
-      ]
-    },
-    {
       "source": "/assets/(.*)",
       "headers": [
         { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
@@ -41,13 +32,6 @@
       ]
     }
   ],
-  "env": {
-    "API_BASE_URL": "https://fanuel045-api.vercel.app"
-  },
   "cleanUrls": true,
-  "trailingSlash": false,
-  "redirects": [
-    { "source": "/index.htm", "destination": "/", "permanent": true },
-    { "source": "/home", "destination": "/", "permanent": false }
-  ]
+  "trailingSlash": false
 }
